syntax = "proto3";

package _hbone;

option go_package="github.com/costinm/hbone/grpc";

// WIP: using gRPC stack for TCP-over-HTTP/2.
// This avoids the server-CLOSE problem and allows using the GRPC XDS integration
// and all the other features. It might have a small performance cost due to
// the extra framing and copy - needs to be evaluated.


message Frame {
  bytes data = 1;
  uint32 status = 2;
}

// Experimental Stream service, to use with gRPC proxyless infrastructure and to handle
// TCP plain-text 'server close' issues with some stacks.
// It will be an alternate TCP transport - still H2 and mTLS based, but with additional framing.
service Stream {
  rpc StreamAggregatedResources(stream Frame) returns (stream Frame) {}
}

